--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
 :root{
-    --primary-color: #3b2ddb;
+    --primary-color: #2c2946;
     --secondary-color: #f5f5f5;
     --rounded-md: 0.5rem;
-    --rounde-sm: 0.2rem;
+    --rounded-sm: 0.2rem;
     --font-family: 'Inter', sans-serif;
     --flow-hidden: hidden;
     --text-muted: #3d4247;
+    --font-md: 1.2rem;
+    --font-sm: 0.9rem;
 }
 
 *, *::before, *::after{
@@ -16,7 +18,10 @@
     margin: 0;
     padding: 0;
 }
-
+a{
+    text-decoration: none;
+    color: inherit;
+}
 body{
     font-family: var(--font-family);
     font-size: 1rem;
@@ -31,3 +36,113 @@ body{
     justify-content: center;
     align-items: center;
 }
+
+.card{
+    min-width: 28rem;
+    max-width: 30rem;
+    min-height: 14rem;
+    max-height: 18rem;
+    background-color: var(--secondary-color);
+    border-radius: var(--rounded-md);
+    display: flex;
+    gap: 20px;
+    overflow: var(--flow-hidden);
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);   
+}
+.card .card-image{
+    width: 30rem;
+    overflow: var(--flow-hidden);
+    height: auto;
+    border-radius: var(--rounded-md);
+}
+.card .card-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card .card-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    gap: 10px;
+}
+
+.card .card-content .card-title{
+    font-size: var(--font-md);
+    font-weight: 600;
+    color: var(--primary-color);
+}
+.card .card-content .card-description{
+    font-size: var(--font-sm);
+    font-weight: 400;
+    color: var(--text-muted);
+}
+.card .card-content .button-wrapper{
+    display: flex;
+    justify-content: end;
+    margin-top: 20px;
+    width: 100%;   
+}
+
+.card .card-content button{
+    padding: 11px 20px;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: var(--rounded-md);
+    border: none;
+    cursor: pointer;
+}
+
+
+
+@media screen and (max-width: 768px){
+    .card{
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        max-height: fit-content;
+    }
+    .card .card-image{
+        width: 100%;
+        height: 13rem;
+        border-radius: var(--rounded-sm);
+    }
+    .card .card-image img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .card .card-content button{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 480px){
+    .card{
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        max-height: fit-content;
+        min-width: 90%;
+        max-width: 95%;
+    }
+    .card .card-image{
+        width: 100%;
+        height: 13rem;
+        border-radius: var(--rounded-sm);
+    }
+    .card .card-image img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .card .card-content button{
+        width: 100%;
+    }
+}
+
+
