--- a/Landing-Page/style.css
+++ b/Landing-Page/style.css
@@ -1,14 +1,14 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@300;400;500;600;700&display=swap');
 
 :root{
     --primary-color: #141121;
     --secondary-color: #f5f5f5;
     --rounded-md: 0.3rem;
     --rounded-sm: 0.2rem;
-    --font-family: 'Inter', sans-serif;
+    --font-family: 'IBM Plex Sans Arabic', sans-serif;
     --flow-hidden: hidden;
-    --text-muted: #6a727851;
+    --text-muted: #404a53b3;
     --text-dark: #1b122a;
     --font-md: 1.2rem;
     --font-sm: 0.9rem;
@@ -36,29 +36,48 @@ body{
     min-height: 100vh;
     justify-content: start;
     align-items: center;
+    position: relative;
 }
 
-
+body::after{
+    content: '';
+    position: fixed;
+    top: -60px;
+    left: -60px;
+    width: 400px;
+    height: 400px;
+    background-color: #ae9df86a;
+    border-radius: 50%;
+    filter: blur(150px);
+    z-index: -1;
+}
+body::before{
+    content: '';
+    position: fixed;
+    top: -60px;
+    right: -60px;
+    width: 400px;
+    height: 400px;
+    background-color: #bcadff4a;
+    border-radius: 50%;
+    filter: blur(150px);
+    z-index: -1;
+}
 nav{
+    direction: rtl;
     width: 100%;
     height: 4rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    z-index: 100;
     padding: 0 1rem;
 }
-nav .nav-logo{
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: var(--primary-color);
-}
-nav .nav-logo img{
-    width: 2rem;
-    height: 2rem;
-    margin-right: 0.5rem;
-    border-radius: var(--rounded-md);
-}
+
 nav .nav-links{
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,10 +129,10 @@ nav .nav-links ul li .castome-select .text-wrapper-icon i.active{
 }
 nav .nav-links ul li .castome-select .items-container{
     position: absolute;
-    left: calc(50% - 4rem);
+    left: calc(60% - 4rem);
     top: 10px;
     background-color: white;
-    min-width: 8rem;
+    min-width: 9rem;
     padding: 10px;
     width: fit-content;
     border-radius: var(--rounded-md);
@@ -130,31 +149,76 @@ nav .nav-links ul li .castome-select .items-container .item{
     padding: 0.3rem 1rem;
     border-radius: var(--rounded-sm);
     cursor: pointer;
+    color: #524b74;
+    font-size: .9rem;
     transition: all 0.3s ease-in-out;
 }
 nav .nav-links ul li .castome-select .items-container .item:hover{
-    background-color: var(--primary-color);
-    color: #f5f5f5;
+    color: var(--primary-color);
 }
-nav .btns-conatiner{
+/*
+lets make the hero section
+*/
+
+section{
+    width: 100%;
+    padding: 2rem 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 3rem;
+}
+section .hero-title{
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    text-align: center;
+}
+
+section .hero-paragraph{
+    max-width: 60%;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--text-muted);
+    text-align: center;
+
+}
+section .btn-container-demo-startd{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    margin-top: 1rem;
 }
-nav .btns-conatiner .btn{
+section .btn-container-demo-startd .btn{
     padding: 0.5rem 1rem;
     border-radius: var(--rounded-md);
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--bg-slate);
+    backdrop-filter: blur(10px);
+    background-color: rgba(228, 220, 255, 0.203);
     color: var(--primary-color);
+    font-size: 1rem;
     font-weight: 500;
-    font-size: 0.9rem;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    background-color: transparent;
+}
+section .btn-container-demo-startd .btn.btn-start{
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
-nav .btns-conatiner .btn.btn-sign-in{
-    background-color: var(--primary-color);
-    color: #f5f5f5;
+.dash-board{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.dash-board img{
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+    border-radius: var(--rounded-md);
+    box-shadow: 0 0.2rem 0.5rem rgba(0,0,0,0.1);
 }
