--- a/Landing-Page/style.css
+++ b/Landing-Page/style.css
@@ -384,12 +384,13 @@ section .btn-container-demo-startd .btn.btn-start {
     }
     nav .nav-links ul{
         display: flex;
-        flex-direction: column;
         gap: 20px;
+        flex-direction: column;
         justify-content: start;
-        align-items: start;
+        align-items: end;
         height: 100%;
         width: 100%;
+        transform: translateX(40%);
         padding: 0;
         margin: 0;
     }
