--- a/login-form/style.css
+++ b/login-form/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 :root{
-    --primary-color: #000000;
-    --secondary-color: #d4dbe1;
+    --primary-color: #252833;
+    --secondary-color: #eaedf0;
     --text-color: #fff;
     --rounded-sm: 0.25rem;
     --rounded-md: 0.5rem;
@@ -29,13 +29,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #dbdee75d;
+    background-color: #b6bcce5d;
 }
 
 form{
     width: 70%;
     height: 600px;
-    box-shadow: 0px 0px 10px 0px #d8d8d881;
+    box-shadow: 0px 0px 10px 0px #aaa7a781;
     display: flex;
     justify-items: start;
     align-items: center;
@@ -200,7 +200,7 @@ form .btn:hover{
 }
 
 form .btn.btn-primary{
-    background-color: #3c414a;
+    background-color: #070808;
 }
 form .btn.btn-primary:hover{
     background-color: var(--primary-color);
